--- a/cms/tsconfig.json
+++ b/cms/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -24,10 +20,8 @@
       "/*": ["/*"],
       "components/*": ["components/*"],
       "layouts/*": ["layouts/*"],
-      "pages/*": ["pages/*"],
+      "pages/*": ["pages/*"]
     }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
