--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "lodash": "^4.17.21",
     "mysql2": "^3.6.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
