--- a/cms/package.json
+++ b/cms/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
+    "axios": "^1.6.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
