--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "bignumber.js": "^9.1.2",
     "camelcase-keys": "^9.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
