--- a/cms/package.json
+++ b/cms/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
     "axios": "^1.6.0",
+    "bignumber.js": "^9.1.2",
     "dayjs": "^1.11.10",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
