--- a/api/package.json
+++ b/api/package.json
@@ -27,9 +27,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "bignumber.js": "^9.1.2",
-    "camelcase-keys": "^9.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "humps": "^2.0.1",
     "lodash": "^4.17.21",
     "mysql2": "^3.6.2",
     "reflect-metadata": "^0.1.13",
