--- a/cms/package.json
+++ b/cms/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.10.2",
     "axios": "^1.6.0",
     "bignumber.js": "^9.1.2",
+    "camelcase-keys": "^9.1.2",
     "dayjs": "^1.11.10",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -31,7 +32,8 @@
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.0",
     "tailwind-children": "^0.5.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "PORT=3100 react-scripts start",
